ProdIND/ProdPrograms/force-app/main/default/objects/MSIL_Application_Status__c/MSIL_Application_Status__c.object-meta.xml
<CustomObject>
    <label>MSIL Application Status</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSIL Application Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>