ProdIND/ProdPrograms/force-app/main/default/objects/MSIL_Application_Status__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>IF( MSIL_Application_Status_Code__c == &apos;340017&apos;, &apos;CANCELED&apos;, IF( MSIL_Application_Status_Code__c == &apos;340012&apos;, &apos;RE_UPLOAD_DOCUMENT&apos;,IF( MSIL_Application_Status_Code__c == &apos;340004&apos; , &apos;REJECTED&apos;,IF( MSIL_Application_Status_Code__c == &apos;340003&apos; , &apos;SANCTIONED&apos;,IF(MSIL_Application_Status_Code__c == &apos;340002&apos;, &apos;UNDER_PROCESS&apos;,IF( MSIL_Application_Status_Code__c == &apos;340005&apos; , &apos;DISBURSED&apos;,&apos;&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>