ProdIND/ProdPrograms/force-app/main/default/objects/MSIL_Application_Status__c/fields/IModule_No__c.field-meta.xml
<CustomField>
    <fullName>IModule_No__c</fullName>
    <label>IModule No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>