ProdIND/ProdPrograms/force-app/main/default/objects/MSIL_Application_Status__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MSIL Application Statuses</relationshipLabel>
    <relationshipName>MSIL_Application_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>