ProdIND/ProdPrograms/force-app/main/default/objects/MSIL_Application_Status__c/fields/MSIL_Application_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>MSIL_Application_Status_Code__c</fullName>
    <label>MSIL Application Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>