ProdIND/ProdPrograms/force-app/main/default/objects/MSIL_Application_Status__c/fields/MSIL_Lead_No__c.field-meta.xml
<CustomField>
    <fullName>MSIL_Lead_No__c</fullName>
    <label>MSIL Lead No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>